huge merge, particle filter implemented

--- a/Documents/camera/camera.tex
+++ b/Documents/camera/camera.tex
@@ -256,7 +256,7 @@ Firstly we consider changes to the pan angle, $\gamma$. Suppose the pan angle un
  \end{bmatrix}.
 \end{equation}
 
-Recall Equation \ref{u} that describes the pixel $u$ as a function of $(x,y,z)$ parameterised by $\alpha$, $\beta$, $\gamma$, $\frac{\lambda}{L_1}$ and $\frac{\lambda}{L_2}$, we can find the change $u + \delta u$ by substituting $\mtx{R} + \delta\mtx{R}$ for $\mtx{R}$ in to the equation as shown in Equation \ref{dugamma} below.
+Recall Equations \ref{u} and \ref{v} that describe the pixels $u$ and $v$ as a function of coordinates $(x,y,z)$ parameterised by $\alpha$, $\beta$, $\gamma$, $\frac{\lambda}{L_1}$ and $\frac{\lambda}{L_2}$, we can find the changes $u + \delta u$ and $v + \delta v$ by substituting $\mtx{R} + \delta\mtx{R}$ for $\mtx{R}$ in to the equations as shown below.
 
 \begin{equation}\label{dugamma}
     u + \delta u = m\frac{\lambda}{L_1}
@@ -265,8 +265,6 @@ Recall Equation \ref{u} that describes the pixel $u$ as a function of $(x,y,z)$ 
                    {(\mtx{R}_{11}x + \mtx{R}_{12}y + \mtx{R}_{13}z)\cos\delta\gamma -(\mtx{R}_{21}x + \mtx{R}_{22}y + \mtx{R}_{23}z)\sin\delta\gamma}                  
         \bigg]
 \end{equation}
-
-Identically for pixel $v$:
 
 \begin{equation}\label{dvgamma}
     v + \delta v = n\frac{\lambda}{L_2}
@@ -277,7 +275,7 @@ Identically for pixel $v$:
 
 \subsubsection{Tilt Angle}
 
-We can perform the same analysis on the changes to the tilt angle $\beta$. We find the following changes to the pixels with a change in tilt angle:
+We now perform the same analysis on the tilt angle $\beta$ and find the following pixels changes:
 
 \begin{equation}\label{dubeta}
     u + \delta u = m\frac{\lambda}{L_1}
@@ -330,8 +328,9 @@ Finally the the pixel changes for a change in roll angle $\alpha$ is given below
         \bigg]
 \end{equation}
 
-In each case as the angle change tends to zero, the equations tend back to the original pixel equations. This is expected and gives us confidence in the sensitivity analysis.
-The sensitivity equations are functions of the coordinates $(x,y,z)$ and the parameters $\alpha$, $\beta$, $\gamma$, $L_1$ and $L_2$. Let us consider how the pixels are affected then in the table scenario where these are known. Figure \ref{fig:sensitivity} shows how the pixels of corner1 change with to the roll, tilt and pan angles. When $\delta\alpha=\delta\beta=\delta\gamma=0$ the corner pixels are $(u,v) =(-724,-340)$ and the parameters are the values in Table \ref{table:results}. We then find the pixels $(u + \delta u,v + \delta v)$ as $\alpha \rightarrow \alpha + \delta\alpha$ , $\beta \rightarrow \beta + \delta\beta$ and $\gamma \rightarrow \gamma + \delta\gamma$. We only consider each angle change independently, $\delta\beta$ and $\delta\gamma$ are varied between $-\frac{\pi}{12}$ and  $\frac{\pi}{12}$ and $\delta\alpha$ is varied between $-\frac{\pi}{4}$ and  $\frac{\pi}{4}$.
+In each case as the angle change tends to zero, the equations tend back to the original pixel equations. This is expected and gives us confidence in the sensitivity analysis.\\
+\newline
+The sensitivity equations are functions of the coordinates $(x,y,z)$ and the parameters $\alpha$, $\beta$, $\gamma$, $L_1$ and $L_2$. Let us consider how the pixels are affected then in the table scenario where these are known. Figure \ref{fig:sensitivity} shows how the pixels of corner 1 change with changes to the roll, tilt and pan angles. When $\delta\alpha=\delta\beta=\delta\gamma=0$ the corner pixels are $(u,v) =(-724,-340)$ and the parameters are the values in Table \ref{table:results}. We then find the pixels $(u + \delta u,v + \delta v)$ as $\alpha \rightarrow \alpha + \delta\alpha$ , $\beta \rightarrow \beta + \delta\beta$ and $\gamma \rightarrow \gamma + \delta\gamma$. We only consider each angle change independently, $\delta\beta$ and $\delta\gamma$ are varied between $-\frac{\pi}{12}$ and  $\frac{\pi}{12}$ and $\delta\alpha$ is varied between $-\frac{\pi}{4}$ and  $\frac{\pi}{4}$.
 
 \begin{figure}
 \centering
@@ -339,78 +338,78 @@ The sensitivity equations are functions of the coordinates $(x,y,z)$ and the par
 \caption{$(u + \delta u,v + \delta v)$ as $\alpha \rightarrow \alpha + \delta\alpha$ , $\beta \rightarrow \beta + \delta\beta$ and $\gamma \rightarrow \gamma + \delta\gamma$}\label{fig:sensitivity}
 \end{figure}
 
-%---------------SLAM---------------------%
-
-\section{A Sort of SLAM}
-
-A more realistic scenario is that we collect information about coordinates and their pixels on the image sequentially. In this case we want to solve our model parameters with each update, at any time the system could be under-determined or over-determined and in the latter case it is likely to be inconsistent due to error. Therefore solving the parameters analytically is not suitable. \\
-
-Instead we solve a least squares problem; we find the set of parameters $\theta$ that minimises $S = \sum_{i=1}^n \sqrt{(u_i - u(x_i,y_i,z_i;\theta))^2 + (v_i - v(x_i,y_i,z_i;\theta))^2}$. As we collect more coordinates and pixels and $n$ grows larger we hope to converge towards the true solution. The functions $u(x,y,z;\theta)$ and $v(x,y,z;\theta)$ are nonlinear and so the Levenberg Marquardt (LM) algorithm is used to minimise $S$.
-
-\subsection{Finding the road}
-
-We will validate this method by trying to find the road surface in an image. Firstly a data set of coordinates and pixels is collected about the two arrow heads shown in Figure \ref{fig:arrows}. Relative position of the car, we find the coordinates and pixels of the arrow heads for multiple images shown in Table \ref{table:arrows}. We then iteratively minimise the $S$ as we increase $n$; perform least squares with more and more data points. For each $\theta$ found we can try to find the road surface, which is known to be a surface with coordinates  $x \in {0:28]}$, $y \in {[-2.34,1.92]}$, $z=-2.5$. Figure \ref{fig:multi_road} shows the found road surface for increasing $n$. It is clear that as least squares is performed with more coordinates and pixels, the road surface is found more accurately. The LM algorithm is implemented via \texttt{lsqnonlin} in Matlab.\\
-
-TO DO
-\begin{itemize}
-\item discuss limitations of LM - had to give an initial guess
-\item other ideas - bayes update? hard to create a likelihood function.
-\end{itemize}
-
-\begin{figure}[h]
-    \centering
-    \subfloat[$n =1$ ]{{\includegraphics[width=7.5cm]{images/road1.png}}}%
-    \qquad
-    \subfloat[$n =4$ ]{{\includegraphics[width=7.5cm]{images/road4.png} }}%
-	\\
-    \subfloat[$n =7$ ]{{\includegraphics[width=7.5cm]{images/road7.png} }}%
-    \qquad
-    \subfloat[$n =10$ ]{{\includegraphics[width=7.5cm]{images/road10.png} }}%
-	\\
-    \subfloat[$n =13$ ]{{\includegraphics[width=7.5cm]{images/road13.png} }}%
-    \qquad
-    \subfloat[$n =16$ ]{{\includegraphics[width=7.5cm]{images/road16.png} }}%
-    \caption{The road surface found with increasing $n$ coordinate and pixels.}%
-    \label{fig:multi_road}%
-\end{figure}
-
-\begin{table}[t]
-    \begin{minipage}[]{.5\textwidth }
-        \footnotesize
-\begin{tabular}{|l|l|l|l|l|}
-\hline
-x[m]        & y[m]        & z[m]  & u    & v    \\
-\hline
-51.87242 & 3.605309 & -3 & 1438 & 926  \\
-45.61886 & 1.190803 & -3 & 1339 & 941  \\
-47.87812 & 3.600823 & -3 & 1453 & 929  \\
-41.62455 & 1.186317 & -3 & 1348 & 944  \\
-43.89484 & 3.605187 & -3 & 1471 & 938  \\
-37.64128 & 1.190681 & -3 & 1354 & 956  \\
-39.91637 & 3.791514 & -3 & 1486 & 953  \\
-33.6734  & 1.349745 & -3 & 1360 & 971  \\
-35.92422 & 3.789489 & -3 & 1510 & 965  \\
-29.68125 & 1.34772  & -3 & 1372 & 995  \\
-31.92212 & 3.788512 & -3 & 1543 & 980  \\
-25.67915 & 1.346743 & -3 & 1387 & 1022 \\
-27.92997 & 3.786488 & -3 & 1582 & 1013 \\
-21.68699 & 1.344719 & -3 & 1405 & 1070 \\
-23.93952 & 3.79023  & -3 & 1633 & 1046 \\
-17.69612 & 1.349551 & -3 & 1432 & 1127 \\
-19.95731 & 3.787854 & -3 & 1705 & 1094 \\
-13.71391 & 1.347174 & -3 & 1477 & 1226 \\
-15.95521 & 3.787575 & -3 & 1819 & 1160 \\
-9.711814 & 1.346895 & -3 & 1573 & 1421 \\
-\hline
-\end{tabular}
-\caption{Arrowhead coordinates and pixels.}\label{table:arrows}
-    \end{minipage}%
-    \begin{minipage}[]{.5\textwidth}
-        \includegraphics[width = \textwidth]{images/2_2369_8551_editted.jpg}
-        \captionof{figure}{Two arrowheads used for coordinate and pixel data collection.}
-        \label{fig:arrows}
-    \end{minipage}
-\end{table}
+%%---------------SLAM---------------------%
+%
+%\section{A Sort of SLAM}
+%
+%A more realistic scenario is that we collect information about coordinates and their pixels on the image sequentially. In this case we want to solve our model parameters with each update, at any time the system could be under-determined or over-determined and in the latter case it is likely to be inconsistent due to error. Therefore solving the parameters analytically is not suitable. \\
+%
+%Instead a least squares regression is solved to find the set of parameters $\theta$ that minimises $S = \sum_{i=1}^n \sqrt{(u_i - u(x_i,y_i,z_i;\theta))^2 + (v_i - v(x_i,y_i,z_i;\theta))^2}$. As we collect more coordinates and pixels and $n$ grows larger we hope to converge towards the true solution. The functions $u(x,y,z;\theta)$ and $v(x,y,z;\theta)$ are nonlinear and so the Levenberg Marquardt (LM) algorithm is used to minimise $S$.
+%
+%\subsection{Finding the road}
+%
+%We will validate this method by trying to find the road surface in an image. Firstly a data set of coordinates and pixels is collected about the two arrow heads shown in Figure \ref{fig:arrows}. Relative position of the car, we find the coordinates and pixels of the arrow heads for multiple images shown in Table \ref{table:arrows}. We then iteratively minimise the $S$ as we increase $n$; perform least squares with more and more data points. For each $\theta$ found we can try to find the road surface, which is known to be a surface with coordinates  $x \in {[0:28]}$, $y \in {[-2.34,1.92]}$, $z=-2.5$. Figure \ref{fig:multi_road} shows the found road surface for increasing $n$. It is clear that as least squares is performed with more coordinates and pixels, the road surface is found more accurately. The LM algorithm is implemented via \texttt{lsqnonlin} in Matlab.\\
+%
+%TO DO
+%\begin{itemize}
+%\item discuss limitations of LM - had to give an initial guess
+%\item other ideas - bayes update? hard to create a likelihood function.
+%\end{itemize}
+%
+%\begin{figure}[h]
+%    \centering
+%    \subfloat[$n =1$ ]{{\includegraphics[width=7.5cm]{images/road1.png}}}%
+%    \qquad
+%    \subfloat[$n =4$ ]{{\includegraphics[width=7.5cm]{images/road4.png} }}%
+%	\\
+%    \subfloat[$n =7$ ]{{\includegraphics[width=7.5cm]{images/road7.png} }}%
+%    \qquad
+%    \subfloat[$n =10$ ]{{\includegraphics[width=7.5cm]{images/road10.png} }}%
+%	\\
+%    \subfloat[$n =13$ ]{{\includegraphics[width=7.5cm]{images/road13.png} }}%
+%    \qquad
+%    \subfloat[$n =16$ ]{{\includegraphics[width=7.5cm]{images/road16.png} }}%
+%    \caption{The road surface found with increasing $n$ coordinate and pixels.}%
+%    \label{fig:multi_road}%
+%\end{figure}
+%
+%\begin{table}[t]
+%    \begin{minipage}[]{.5\textwidth }
+%        \footnotesize
+%\begin{tabular}{|l|l|l|l|l|}
+%\hline
+%x[m]        & y[m]        & z[m]  & u    & v    \\
+%\hline
+%51.87242 & 3.605309 & -2.5 & 1438 & 926  \\
+%45.61886 & 1.190803 & -2.5 & 1339 & 941  \\
+%47.87812 & 3.600823 & -2.5 & 1453 & 929  \\
+%41.62455 & 1.186317 & -2.5 & 1348 & 944  \\
+%43.89484 & 3.605187 & -2.5 & 1471 & 938  \\
+%37.64128 & 1.190681 & -2.5 & 1354 & 956  \\
+%39.91637 & 3.791514 & 2.53 & 1486 & 953  \\
+%33.6734  & 1.349745 & -2.5 & 1360 & 971  \\
+%35.92422 & 3.789489 & -2.5 & 1510 & 965  \\
+%29.68125 & 1.34772  & -2.5 & 1372 & 995  \\
+%31.92212 & 3.788512 & -2.5 & 1543 & 980  \\
+%25.67915 & 1.346743 & -2.5 & 1387 & 1022 \\
+%27.92997 & 3.786488 & -2.5 & 1582 & 1013 \\
+%21.68699 & 1.344719 & -2.5 & 1405 & 1070 \\
+%23.93952 & 3.79023  & -2.5 & 1633 & 1046 \\
+%17.69612 & 1.349551 & -2.5 & 1432 & 1127 \\
+%19.95731 & 3.787854 & -2.5 & 1705 & 1094 \\
+%13.71391 & 1.347174 & -2.5 & 1477 & 1226 \\
+%15.95521 & 3.787575 & -2.5 & 1819 & 1160 \\
+%9.711814 & 1.346895 & -2.5 & 1573 & 1421 \\
+%\hline
+%\end{tabular}
+%\caption{Arrowhead coordinates and pixels.}\label{table:arrows}
+%    \end{minipage}%
+%    \begin{minipage}[]{.5\textwidth}
+%        \includegraphics[width = \textwidth]{images/2_2369_8551_editted.jpg}
+%        \captionof{figure}{Two arrowheads used for coordinate and pixel data collection.}
+%        \label{fig:arrows}
+%    \end{minipage}
+%\end{table}
 
 \begin{thebibliography}{9}
 \bibitem{rotations}
